      Print errors about -C, -G and -z options usage.
      For PCAP_ERROR_CAPTURE_NOTSUP, show the error message provided
        by libpcap for that error if it's non-empty.
      Update the -z option processing. Print "invalid option -- z" when it is.
    Other:
      Avoid race condition when receiving signal during shutdown.
    Source code:
      Fix '-tt' option printing when time > 2106-02-07T06:28:15Z.
      Add sub-second packet timestamp checks for invalid micro/nano.
      Remove unused missing/snprintf.c.
      Fix incompatible pointer types with time functions calls on Windows.
      Use C99 macros to define 64-bit constants and maximum 64-bit values.
    Windows:
      Fixed to find wpcap.dll if WinPcap isn't installed and Npcap was
        installed without the WinPcap API compatibility option. (GitHub
        issue #1226).
    Building and testing:
      Makefile.in: Use a local libpcap in the releasecheck target.
      CMake: Fix build with CMake 3.31.
      autotools, CMake: don't separately test whether snprintf(3) is
        available and whether it's suitable - the test for whether it's
        suitable also fails if it's unavailable.
      CMake: Skip snprintf(3) tests when cross-compiling.
      autotools, CMake: fix issues with snprintf test and sanitizers.
      CMake: check whether check_c_source_runs() works, treat the build
        as a cross-compile if it doesn't work.
      Autoconf: Use AC_SYS_YEAR2038_RECOMMENDED when possible if the
        environment variable BUILD_YEAR2038 = yes (via autogen.sh).
      Autoconf: Avoid incorrectly include the libpcap's config.h.
      Require config.h to be from the tcpdump build.

Friday, August 30, 2024 / The Tcpdump Group
  Summary for 4.99.5 tcpdump release
    Refine protocol decoding for:
      Arista: Use the test .pcap file from pull request #955 (HwInfo).
      BGP: Fix an undefined behavior when it tries to parse a too-short packet.
      CARP: Print the protocol name before any GET_().